# hostnamed

./: hostnamed.SlackBuild  meson.build  meson_options.txt
data/: meson.build  org.freedesktop.hostname1.rules.in
hostnamed/: meson.build  meson_options.txt
hostnamed/data/: org.freedesktop.hostname1.conf  org.freedesktop.hostname1.policy  org.freedesktop.hostname1.rules
hostnamed/src/: main.c  meson.build  rcl-hostname.c  rcl-hostname.h
po/: meson.build
slack/: hostnamectl
src/: main.c  meson.build  rcl-hostname.c  rcl-hostname.h
