option(
  'polkit',
  type        : 'feature',
  value       : 'auto',
  description : 'Use polkit for authorising Set* D-Bus method calls',
)

option(
  'dbus_system_service_dir',
  type        : 'string',
  value       : '',
  description : 'Directory for D-Bus system service files '
              + '(default: <datadir>/dbus-1/system-services)',
)

option(
  'dbus_system_conf_dir',
  type        : 'string',
  value       : '',
  description : 'Directory for D-Bus system bus configuration files '
              + '(default: <sysconfdir>/dbus-1/system.d)',
)

option(
  'polkit_policy_dir',
  type        : 'string',
  value       : '',
  description : 'Directory for polkit .policy files '
              + '(default: <datadir>/polkit-1/actions)',
)

option(
  'HOSTNAME',
  type        : 'string',
  value       : '/etc/HOSTNAME',
  description : 'Path to the hostname config file',
)

option(
  'privileged-group',
  type        : 'string',
  value       : 'wheel',
  description : 'Group allowed to change hostname without authentication',
)
